--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "istanbul": "0.3.17",
     "mocha": "2.2.5",
     "should": "7.0.2",
-    "supertest": "1.0.1"
+    "supertest": "1.0.1",
+    "jshint": "~2.8.0"
   },
   "engines": {
     "node": ">= 0.10.0"
@@ -33,9 +34,10 @@
     "lib/"
   ],
   "scripts": {
-    "test": "mocha --require test/support/env --reporter spec --bail --check-leaks test/ test/acceptance/",
+    "test": "npm run-script jshint && mocha --require test/support/env --reporter spec --bail --check-leaks test/ test/acceptance/",
     "test-ci": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --require test/support/env --reporter spec --check-leaks test/ test/acceptance/",
     "test-cov": "istanbul cover node_modules/mocha/bin/_mocha -- --require test/support/env --reporter dot --check-leaks test/ test/acceptance/",
-    "test-tap": "mocha --require test/support/env --reporter tap --check-leaks test/ test/acceptance/"
+    "test-tap": "mocha --require test/support/env --reporter tap --check-leaks test/ test/acceptance/",
+    "jshint": "jshint 'index.js' 'lib/' 'test/'"
   }
 }
